--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .auth-image {
-    width: 250px;
-    height:300px;
+    width: 350px;
+    height:auto;
 }
 
 .form-group {
@@ -15,6 +15,15 @@
     margin-left:50px;
 }
 
+h3{
+    text-align:center;
+
+}
+
+
+
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -25,7 +34,7 @@ html {
     margin-bottom: 10px; /* Margin bottom by footer height */
 }
   .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
