--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,56 +1,185 @@
-.auth-image {
-    width: 350px;
-    height:auto;
-}
-
-.form-group {
-    width:60%;
-    padding-top:20px;
-    padding-left:40px;
-}
-.form-check-input {
-    padding-left:40px;
-}
-.btn.btn-primary {
-    margin-left:50px;
-}
-
-h3{
-    text-align:center;
-
-}
-
-
-
-
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
+/* --- STYLES FOR ALL PAGES --- */
+body {
+    /* Typography */
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  
+    /* Visual */
+    background-image: url("../imgs/ignasi_pattern_s.png");
+  }
+  
+  html {
+    /* Positioning */
     position: relative;
+  
+    /* Box-model */
     min-height: 100%;
-}
-  body {
-    margin-bottom: 10px; /* Margin bottom by footer height */
-}
-  .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height:60px; /* Vertically center the text there */
-    background-color:rgb(207, 198, 198);
-    text-align:center;
-    left:0;
-}
-/* .footer {
-    position: absolute;
-    right: 0;
-    bottom: -900px;
-    left: 0;
-    padding: 1rem;
-    background-color: #efefef;
+  }
+  
+  /* add space for fixed nav */
+  main {
+    margin: 80px 0;
+  }
+  
+  /* create styles for use for all white main boxes */
+  .block {
+    background-color: #fff;
+  
+    padding: 30px;
+    margin-bottom: 30px;
+  }
+  
+  .block-header {
+    /* Typography */
+    color: #4aaaa5;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: bold;
+  }
+  
+  /* NAV START */
+  #logo {
+    font-family: Georgia, Times, "Times New Roman", serif;
+  
+    /* Typography */
+    font-size: 24px;
+    font-weight: bold;
+    color: #fff;
+  
+    /* Visual */
+    background: #4aaaa5;
+  }
+  
+  /* override bootstrap hover color and border */
+  .navbar-default .navbar-nav > li > a:hover {
+    color: #4aaaa5;
+  }
+  
+  .navbar {
+    background: white;
+    border: none;
+  }
+  
+  /* media query for nav background color change */
+  @media only screen and (max-width: 767px) {
+    .navbar-header {
+      background-color: #4aaaa5;
+    }
+  }
+  /* END NAV */
+  
+  
+  /* CONNECT W/ ME CSS */
+  .connect-header {
+    /* Typography */
+    font-size: 25px;
+  }
+  
+  .connect-photo {
+    /* Box-model */
+    width: 55px;
+    height: 55px;
+  }
+  
+  #images {
+    /* Box-model */
+    padding-top: 15px;
+  
+    /* Typography */
     text-align: center;
-} */
-
+  }
+  /* END CONNECT W/ ME */
+  
+  
+  /* BEGIN FOOTER */
+  .footer {
+    /* Positioning */
+    position: absolute;
+    bottom: 0;
+  
+    /* Box-model */
+    width: 100%;
+    height: 60px;
+  
+    /* Visual */
+    background-color: #666;
+  }
+  
+  .text-muted-footer {
+    /* Box-model */
+    margin-top: 15px;
+  
+    /* Typography */
+    color: #fff;
+  }
+  
+  .two-toned-footer-color {
+    /* Box-model */
+    height: 6px;
+    padding-top: 3px;
+  
+    /* Visual */
+    background-color: #4aaaa5;
+  }
+  /* END FOOTER */
+  /* --- END STYLES FOR ALL PAGES --- */
+  
+  /* --- PAGE-SPECIFIC STYLES --- */
+  /* ABOUT-ME PAGE */
+  .about-me-header {
+    /* Positioning */
+    margin-bottom: 33px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+  
+    /* Typography */
+    font-size: 32px;
+    font-weight: bold;
+    color: #4aaaa5;
+  }
+  
+  #about-image {
+    /* Positioning */
+    float: left;
+  
+    /* Box-model */
+    width: 200px;
+    margin: 0 20px 10px 0;
+  }
+  /* END ABOUT-ME PAGE */
+  
+  
+  /* PORTFOLIO PAGE */
+  .port-image {
+    margin: 20px auto;
+  }
+  /* END PORTFOLIO PAGE */
+  
+  
+  /* CONTACT FORM PAGE  */
+  .form-control {
+    /* give input boxes right angles */
+    border-radius: 0;
+  
+    /* keep from horizontally resizing text area */
+    min-width: 100%;
+    max-width: 100%;
+  }
+  
+  .submit-btn {
+    /* Box-model */
+    padding: 15px 30px;
+    font-size: 16px;
+    font-weight: lighter;
+  
+    /* Typography */
+    color: #fff;
+  
+    /* Visual */
+    background-color: #4aaaa5;
+    border: 0;
+  }
+  
+  .submit-btn:hover {
+    opacity: .7;
+  }
+  
+  /* END CONTACT FORM PAGE */
   
