--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@ body {
   
     /* Visual */
     background-image: url("/assets/images/houndstooth-pattern.png");
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
   }
   
   html {
